@@ -1,4 +1,5 @@
-[SMACross]
+[SMARecipe]
+sDesciption = "SMACross"
 fRecipeVersion = 1.0
 lRequiredFeedParams = ['mFeedOhlc']
 lRequiredDishesParams = ['rShortMa', 'rLongMa']
