@@ -1,17 +1,20 @@
 # These tests will only work if you have pybacktest installed:
 #     https://github.com/ematvey/pybacktest
 # You dont need to have a listener thread running
+# These tests will only work if you have created a CSV file /tmp/EURUSD60-2014.csv
 set echo True
 back omlette open /tmp/EURUSD60-2014.hdf
 back omlette check
 # read a CSV file from Mt4
-back feed read_mt4_csv EURUSD60-2014.csv EURUSD 60 2014
+back feed read_mt4_csv /tmp/EURUSD60-2014.csv EURUSD 60 2014
 # list the feeds we have read
 back feed list
 # list the known recipes
 back recipe list
 # set the current recipe
 back recipe set SMARecipe
+# show the current recipe config
+back recipe config
 # list the known chefs
 back chef list
 # set the current chef
@@ -27,7 +30,7 @@ back servings trades
 back servings positions
 back servings equity
 back servings trade_price
-back servings summary
+back servings reviews
 # display gives a complete listing of the contents of the HDF file
 back omlette display
 # close and save the HDF file
