@@ -1,8 +1,14 @@
 # These are some simple examples of commands that dont need any
 # arguments, and return their results in JSON
 #
+# These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
+# the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
+# the RabbitMQ server configured and running.
 set echo True
+# We need a listener thread running, subscribed to retval.#
 sub run retval.# timer.#
+py import time
+py time.sleep(15)
 pub wait jOTAccountInformation
 pub wait jOTOrdersTickets
 pub wait jOTOrdersHistory
