@@ -36,4 +36,4 @@ optional arguments:
 ----
 This file is automatically generated from the source code: do not edit.
 
-Home: [[Home]] Next: [[DocOTCmd2_subscribe]]Index: [[TitleIndex]] 
+Next: [[DocOTCmd2_subscribe]]
