@@ -47,10 +47,13 @@ back feed plot                                 - plot the CSV data using OTPpnAm
 
 Set the recipe that the chef will use, and make the ingredients from the feeds.
 {{{
-back recipe list                                 - list the known recipes
-back recipe set                                  - show the current recipe
-back recipe set RECIPE                           - set the current recipe
-back recipe ingredients                          - make the ingredients
+back recipe list                        - list the known recipes
+back recipe get                         - show the current recipe
+back recipe set RECIPE                  - set the current recipe
+back recipe ingredients                 - make the ingredients
+back recipe config                      - show the current recipe config
+back recipe config KEY                  - show the current config of KEY
+back recipe config KEY VAL              - set the current config of KEY to VAL
 }}}
 
 ==== OTCmd2 backtest chef
@@ -67,12 +70,13 @@ back chef cook                          - cook the recipe by the chef
 
 List the servings the chef has cooked, and dish out the servings.
 {{{
-back servings list        - list the servings that result from the recipe and the chef
-back servings signals     - show the signals: when to buy or sell
-back servings trades      - show the trades: what was bought or sold
-back servings positions   - show how the trades effected the positions
-back servings equity      - show the results of the trades as equity differences
-back servings metrics     - show the metrics and analyses of the trades
+back servings list            - list the servings that result from the recipe and chef
+back servings signals         - show the signals: when to buy or sell
+back servings trades          - show the trades: what was bought or sold
+back servings positions       - show how the trades effected the positions
+back servings equity          - show the results of the trades as equity differences
+back servings reviews         - show the metrics and analyses of the trades
+back servings tabview SERVING - view the SERVING with tabview, if installed
 }}}
 
 ==== OTCmd2 backtest plot
@@ -99,4 +103,4 @@ Options:
 ----
 This file is automatically generated from the source code: do not edit.
 
-Home: [[Home]] Next: [[DocOTCmd2_rabbit]]Index: [[TitleIndex]] 
+Next: [[DocOTCmd2_rabbit]]
