@@ -23,4 +23,4 @@ Options:
 ----
 This file is automatically generated from the source code: do not edit.
 
-Home: [[Home]] Next: [[DocOTCmd2_order]]Index: [[TitleIndex]] 
+Next: [[DocOTCmd2_order]]
