@@ -19,4 +19,4 @@ Options:
 ----
 This file is automatically generated from the source code: do not edit.
 
-Home: [[Home]] Next: [[DocOTCmd2_backtest]]Index: [[TitleIndex]] 
+Next: [[DocOTCmd2_backtest]]
