@@ -29,4 +29,4 @@ Options:
 ----
 This file is automatically generated from the source code: do not edit.
 
-Home: [[Home]] Next: [[DocOTCmd2_chart]]Index: [[TitleIndex]] 
+Next: [[DocOTCmd2_chart]]
